              file names or color count that contain shell metacharacters.
              Always present ('pnmquantall' has existed, aka 'ppmquantall',
              since primordial Netpbm).

              ppmtogif: fix arbitrary shell commands when arguments contain
              shell metacharacters.  Broken in Netpbm 10.37 (June 2006).

25.03.28 BJH  Release 11.10.00

              pamdice: Add -listfile, -indexfile, -numberwidth, -dry-run .

              pamundice: Add -indexfile .

              pamflip: improve efficiency - less copying of tuples in basic
              whole-image non-PBM case.

              pamflip: more direct error message for -memsize=0.

              pamflip: warn if redundant -pagesize specified with -verbose.

              pcdovtoppm: improve syntax error messages.

              pammixmulti: Fix crash from uninitialized memory.  Introduced in
              Netpbm 11.09 (December 2024).

              giftopnm: Fix wild pointer reference with -verbose and
              invalid extension type.  Broken in Netpbm 10.59 (December 2012).

              pdbimgtopam, pamtopdbimg: Fix crash when out of memory.  Always
              broken (programs were new in Netpbm 10.52 (September 2010)).

              pamrestack: fix failure when height too large for computations.
              Broken in Netpbm 10.99 (June 2022).

              pamflip: fix: Don't allow -xform with older transform options
              (-leftright, etc.).  Before, -xform would be ignored in that
              case.

24.12.25 BJH  Release 11.09.00

              pammixmulti: Add -blend=alpha-weighted.  Thanks Scott Pakin.

              ppmhist: Don't accept -nomap and -map together, or -colorname
              with -map.  (Before, -nomap and -colorname were ignored with
              -map).

              libnetpbm: Fix crash in ppm_colorDict_destroy; affects all
              programs that use color names.  Introduced in Netpbm 11.07 (June
              2024).
