@@ -14,6 +14,9 @@ not yet  BJH  Release 11.11.00
               ppmtogif: fix arbitrary shell commands when arguments contain
               shell metacharacters.  Broken in Netpbm 10.37 (June 2006).
 
+              pnmtofiasco: fix crash when image is really small.  Always
+               broken (programs were new in Netpbm 9.6, July 2000).
+              
 25.03.28 BJH  Release 11.10.00
 
               pamdice: Add -listfile, -indexfile, -numberwidth, -dry-run .
